--- a/app/src/main/res/layout/historyresults.xml
+++ b/app/src/main/res/layout/historyresults.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:context=".ui.dashboard.watchHistory">
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/dateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="date"
