--- a/app/src/main/res/layout/historyresults.xml
+++ b/app/src/main/res/layout/historyresults.xml
@@ -4,18 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.dashboard.watchHistory">
+    tools:context=".watchHistory">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/Result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Result"
         android:textSize="35dp"/>
-
-    <ListView
-        android:id="@+id/Listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </LinearLayout>
