--- a/app/src/main/res/layout/historyresults.xml
+++ b/app/src/main/res/layout/historyresults.xml
@@ -6,11 +6,29 @@
     android:orientation="vertical"
     tools:context=".watchHistory">
 
-    <TextView
-        android:id="@+id/Result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Result"
-        android:textSize="35dp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/Date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Date"
+            android:textColor="@color/black"
+            android:textSize="30dp" />
+        <TextView
+            android:id="@+id/Result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Result"
+            android:textColor="#006600"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 </LinearLayout>
