--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,45 +13,50 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="8dp" />
-
-    <LinearLayout
-        android:layout_width="410dp"
-        android:layout_height="622dp"
-        android:orientation="vertical"
-
-        app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
-        tools:layout_editor_absoluteX="0dp">
-
-        <CalendarView
-            android:id="@+id/calendarView"
-            android:layout_width="match_parent"
-            android:layout_height="301dp"
-            android:layout_marginBottom="30dp"></CalendarView>
-
-        <TextView
-            android:id="@+id/myDate"
-            android:layout_width="179dp"
-            android:layout_height="57dp"
-            android:layout_marginLeft="120dp"
-            android:text=" Date"
-            android:textAlignment="center"
-            android:textColor="#304040"
-            android:textSize="23sp" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="160dp"
-
-            android:text="Confirm"
-            android:backgroundTint="#304040"
-            tools:layout_editor_absoluteX="11dp"
-            tools:layout_editor_absoluteY="476dp" />
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="9dp" />
 
 
-</LinearLayout>
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="301dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.269"></CalendarView>
+
+
+    <TextView
+        android:id="@+id/myDate"
+        android:layout_width="179dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="40dp"
+        android:text=" Date"
+        android:textAlignment="center"
+        android:textColor="#304040"
+        android:textSize="23sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+
+    <TextView
+        android:id="@+id/Result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Result"
+        android:textColor="#D61C4E"
+        android:textSize="50dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myDate"
+        app:layout_constraintVertical_bias="0.0" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
